debug visibility hidden issue on smartphone

--- a/index.css
+++ b/index.css
@@ -102,7 +102,6 @@ li img {
     border:none;
     border-bottom: solid white 4px;
     box-shadow: 0px 1px 0px rgb(0, 0, 0);
-    /* caret-color: red; */
 }
 #nameInput::placeholder {
     color:rgb(255, 255, 255);
@@ -140,7 +139,7 @@ li img {
 }
 
 #cryptoInput {
-    visibility: hidden;
+    display:none;
     box-sizing: border-box;
     font-size: 2rem;
     padding: 0.5em 1em;
